# rathole-gui-launcher

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  release.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  paths.rs  tray.rs
src-tauri/src/models/: client.rs  common.rs  mod.rs  server.rs
src-tauri/src/runtime/: manager.rs  mod.rs  port_check.rs  updater.rs
src-tauri/src/store/: config_store.rs  mod.rs  runtime_state.rs  settings.rs
src/api/: events.ts  tauri.ts
src/components/: AppShell.vue  ConfigList.vue  CreateConfigModal.vue  LanguagePicker.vue  RatholeStatusBanner.vue  StatusBadge.vue  WorkspaceWelcome.vue
src/components/client/: ClientEditor.vue
src/components/common/: EditorHeader.vue  LogPanel.vue  NameDialog.vue  SectionCard.vue  ServiceList.vue  TransportEditor.vue
src/components/server/: ServerEditor.vue
src/composables/: useLanguage.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json  ko.json  zh-CN.json
src/router/: index.ts
src/stores/: app.ts  configs.ts  runtime.ts  updater.ts
src/styles/: index.less
src/types/: rathole.ts
src/utils/: keys.ts
src/views/: SettingsView.vue  WorkspaceView.vue
