[package]
name = "rathole-gui-launcher"
version = "0.1.0"
description = "Cross-platform graphical launcher for the rathole reverse proxy."
authors = ["lemonit.cn"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "rathole_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }
tokio = { version = "1.41", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time", "net", "fs"] }
thiserror = "2.0"
parking_lot = "0.12"
indexmap = { version = "2.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target."cfg(unix)".dependencies]
nix = { version = "0.29", features = ["signal"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
